# image-gen-mcp

./: README.md  TEST_SUMMARY.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
src/image_gen_mcp/: __init__.py  dspy_prompter.py  latent_guided_provider.py  latent_hacker.py  latent_tools.py  server.py
src/image_gen_mcp/providers/: __init__.py  base.py  cloudflare.py  huggingface.py  pollinations.py  replicate.py  together.py
tests/: README.md  __init__.py  conftest.py  test_base.py  test_latent_hacker.py  test_pollinations.py  test_server.py  test_validation.py
